--- a/17-Modern-JS-Modules-Tooling/starter/package.json
+++ b/17-Modern-JS-Modules-Tooling/starter/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash-es": "^4.17.21"
+    "lodash-es": "^4.17.21",
+    "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
     "parcel": "^2.0.1"
