--- a/18-forkify/starter/package.json
+++ b/18-forkify/starter/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.0.1",
+    "@types/regenerator-runtime": "^0.13.1",
     "parcel": "^2.0.1"
   },
   "dependencies": {
     "core-js": "^3.19.3",
+    "fractional": "^1.0.0",
     "regenerator-runtime": "^0.13.9"
   }
 }
